--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "/"  # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-title = "Academic"
+title = "Melania Alvarez"
 copyright = "&copy; 2017 Melania Alvarez"
 theme = "academic"
 enableEmoji = true
